--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -19,10 +19,18 @@ As part of the R\&D programme for the CLIC vertex detector, the
 performance of thin silicon sensors is quantified using the Timepix3
 readout chip with $55\,\micron$ pixel pitch. $50\,\micron$ to
 $300\,\micron$ thick planar sensors are bump-bonded to $750\,\micron$
-thick Timepix3 ASICs. These assemblies are tested in test beams and
-the data are used to validate the AllPix \textsc{Geant4}-based
-simulations. The simulation is finally extrapolated for smaller pixels
-of $25\,\micron$ pitch.
+thick Timepix3 ASICs. These assemblies are tested in test beams using
+the CLICdp Timepix3 telescope.
+
+The AllPix simulation framework (described in \cref{sec:AllPix}) is
+used to simulate the performance of thin sensors and to understand the
+charge sharing in such sensors. For the DUT the same digitiser as for
+the Timepix3 telescope planes is used
+(c.f. \cref{sec:allpix_digitisation}). This digitiser takes into
+account the semiconductor physics, drift, diffusion charge sharing in
+the planar sensors and also noise in the readout ASICs. The data is
+used to validate the simulations. The simulation is finally
+extrapolated for smaller pixels of $25\,\micron$ pitch.
 
 %% --------------------------------------------- %%
 \section{Thin-sensor assemblies}
@@ -146,6 +154,34 @@ energy depositions.
 
 For all assemblies, the energy deposition in electrons is given in
 \cref{sec:appendixCalibDataG4}.
+
+\cref{fig:G4_simu_data_Edep} compares the total energy deposition in a
+cluster in data and simulation. The most-probable-value (MPV) and the
+width of the distributions in data and simulation agree. Therefore the
+calibration is validated.
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_Edep.pdf}
+    \caption{$50\,\micron$}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_Edep.pdf}
+    \caption{$100\,\micron$}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_Edep.pdf}
+    \caption{$150\,\micron$}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+
+    \caption{$300\,\micron$}
+  \end{subfigure}
+  \caption{The energy deposition for all cluster sizes in simulation
+    and data for (a) W19\_G7, (b) W5\_E2 and (c) W5\_F1. The
+    assemblies are operated at nominal conditions.}
+  \label{fig:G4_simu_data_Edep}
+\end{figure}
 
 
 %% --------------------------------------------- %%
@@ -277,6 +313,35 @@ The most common cluster shapes are illustrated in
     \bottomrule
   \end{tabular}
 \end{table}
+
+\cref{fig:G4_simu_data_cluSize} compares the cluster-size distribution
+in simulations and data for the assemblies operated at nominal
+conditions. There is a good agreement between simulation and data in
+terms of cluster-size distribution.
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_sizeX.pdf}
+    \caption{$50\,\micron$ (W19\_G7)}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_sizeX.pdf}
+    \caption{$100\,\micron$ (W5\_E2)}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_sizeX.pdf}
+    \caption{$150\,\micron$ (W5\_F1)}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+
+    \caption{$300\,\micron$ p-in-n}
+  \end{subfigure}
+  \caption{The cluster size distribution in simulation and data for
+    $50\,\micron$, $100\,\micron$, $150\,\micron$ and $300\,\micron$
+    thick sensors. The assemblies are operated at nominal conditions.}
+  \label{fig:G4_simu_data_cluSize}
+\end{figure}
+
 
 The fraction of different cluster sizes depends on the operating
 conditions of the assemblies like the bias voltage and the threshold
@@ -444,35 +509,61 @@ information (by using the $\eta$-correction method as described in
 
 The overall residual is defined by the RMS of the residual of all
 tracks combined. The distribution of the residuals for different
-sensor thicknesses operated at the nominal conditions is shown in
-\cref{fig:residualsHist_thickness}. The wider component in the
-residual distributions corresponds to the single-pixel clusters. For
-thicker sensors, the fraction of multi-pixel clusters increases. This
-leads to a higher fraction of more precisely reconstructed hits and
-therefore the residual distribution gets narrower.
+sensor thicknesses operated at nominal conditions in simulation and
+data is shown in \cref{fig:G4_simu_data_Residuals}. The wider
+component in the residual distributions corresponds to the
+single-pixel clusters. For thicker sensors, the fraction of
+multi-pixel clusters increases. This leads to a higher fraction of
+more precisely reconstructed hits and therefore the residual
+distribution gets narrower. There is a good agreement between
+simulation and data in terms of the residuals distribution.
 
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/residualsHist_W19_C7.pdf}
-    \caption{$50\,\micron$ sensor}
+    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_resX.pdf}
+    \caption{$50\,\micron$}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/residualsHist_W5_E2.pdf}
-    \caption{$100\,\micron$ sensor}
+    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_resX.pdf}
+    \caption{$100\,\micron$}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/residualsHist_W5_F1.pdf}
-    \caption{$150\,\micron$ sensor}
+    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_resX.pdf}
+    \caption{$150\,\micron$}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.23\textwidth}
 
-    \caption{$300\,\micron$ sensor}
+    \caption{$300\,\micron$ p-in-n}
   \end{subfigure}
-  \caption{Examples of the residuals distributions in the x direction
-    for the assemblies (a) W19\_C7, (b) W5\_E2 and (c) W5\_F1. The
+  \caption{The residuals distribution in the x direction in simulation
+    and data for the assemblies (a) W19\_G7, (b) W5\_E2 and (c)
+    W5\_F1. The assemblies are operated at nominal conditions. The
     track resolution is not unfolded.}
-  \label{fig:residualsHist_thickness}
+  \label{fig:G4_simu_data_Residuals}
 \end{figure}
+
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.23\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/residualsHist_W19_C7.pdf}
+%%     \caption{$50\,\micron$ sensor}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.23\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/residualsHist_W5_E2.pdf}
+%%     \caption{$100\,\micron$ sensor}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.23\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/residualsHist_W5_F1.pdf}
+%%     \caption{$150\,\micron$ sensor}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.23\textwidth}
+
+%%     \caption{$300\,\micron$ sensor}
+%%   \end{subfigure}
+%%   \caption{Examples of the residuals distributions in the x direction
+%%     for the assemblies (a) W19\_C7, (b) W5\_E2 and (c) W5\_F1. The
+%%     track resolution is not unfolded.}
+%%   \label{fig:residualsHist_thickness}
+%% \end{figure}
 
 
 The factors affecting the fraction of different cluster sizes such as
@@ -542,119 +633,48 @@ increasing the threshold than for thick sensors.
 
 \begin{figure}[htbp] 
   \centering
-  \includegraphics[width=0.5\textwidth]{./figures/TestBeam/Efficiency_vs_THL.pdf}
-  \caption{Global detection efficiency as a function of the threshold
-    of the readout ASIC for different sensor thicknesses.}
+  \begin{subfigure}[b]{0.45\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/Efficiency_vs_THL.pdf}
+    \caption{}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.45\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/Efficiency_vs_THL_zoom.pdf}
+    \caption{}
+  \end{subfigure}
+  \caption{(a) Global detection efficiency as a function of the
+    threshold of the readout ASIC for different sensor thicknesses
+    (for the assemblies W19\_L8, W5\_E2 and W5\_F1). (b) focuses the
+    efficiencies between $95\%$ and $100\%$.}
   \label{fig:efficiency_VS_Threshold}
 \end{figure}
 
+%% %% --------------------------------------------- %%
+%% \section{Validation of the simulation}
+%% \label{sec:ThinSensorSimuValidation}
 
-
-
-%% --------------------------------------------- %%
-\section{Validation of the simulation}
-\label{sec:ThinSensorSimuValidation}
-
-
-
-The AllPix simulation framework (described in \cref{sec:AllPix}) is
-used to simulate the performance of thin sensors and to understand the
-charge sharing in such sensors. For the DUT the same digitiser as the
-Timepix3 telescope planes is used
-(c.f. \cref{sec:allpix_digitisation}). This digitiser takes into
-account the semiconductor physics, drift, diffusion charge sharing in
-the planar sensors and also noise in the readout ASICs.
-
-The assemblies are simulated at the nominal operating conditions. The
-cluster size, the residuals and the energy deposition distributions
-are shown in
-\cref{fig:G4_simu_data_cluSize,fig:G4_simu_data_Residuals,fig:G4_simu_data_Edep}
-comparing data and simulations. The track resolution of
-$\sim2\,\micron$ is not unfolded in the residuals distribution. The
-simulation is in good agreement with the data and is used to predict
-the performance of smaller pixel pitches.
-
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_sizeX.pdf}
-    \caption{$50\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_sizeX.pdf}
-    \caption{$100\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_sizeX.pdf}
-    \caption{$150\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-
-    \caption{$300\,\micron$ p-in-n}
-  \end{subfigure}
-  \caption{The cluster size distribution in simulation and data for
-    $50\,\micron$, $100\,\micron$, $150\,\micron$ and $300\,\micron$
-    thick sensors. The assemblies are operated at the nominal
-    conditions.}
-  \label{fig:G4_simu_data_cluSize}
-\end{figure}
-
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_resX.pdf}
-    \caption{$50\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_resX.pdf}
-    \caption{$100\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_resX.pdf}
-    \caption{$150\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-
-    \caption{$300\,\micron$ p-in-n}
-  \end{subfigure}
-  \caption{The residuals distribution in simulation and data for
-    $50\,\micron$, $100\,\micron$, $150\,\micron$ and $300\,\micron$
-    thick sensors. The assemblies are operated at the nominal
-    conditions. The tracking resolution is not unfolded.}
-  \label{fig:G4_simu_data_Residuals}
-\end{figure}
-
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_Edep.pdf}
-    \caption{$50\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_Edep.pdf}
-    \caption{$100\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_Edep.pdf}
-    \caption{$150\,\micron$ n-in-p}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.23\textwidth}
-
-    \caption{$300\,\micron$ p-in-n}
-  \end{subfigure}
-  \caption{The energy deposition for all cluster sizes in simulation
-    and data for $50\,\micron$, $100\,\micron$, $150\,\micron$ and
-    $300\,\micron$ thick sensors. The assemblies are operated at the
-    nominal conditions.}
-  \label{fig:G4_simu_data_Edep}
-\end{figure}
+%% The assemblies are simulated at the nominal operating conditions. The
+%% cluster size, the residuals and the energy deposition distributions
+%% are shown in
+%% \cref{fig:G4_simu_data_cluSize,fig:G4_simu_data_Residuals,fig:G4_simu_data_Edep}
+%% comparing data and simulations. The track resolution of
+%% $\sim2\,\micron$ is not unfolded in the residuals distribution. The
+%% simulation is in good agreement with the data and is used to predict
+%% the performance of smaller pixel pitches.
 
 %% --------------------------------------------- %%
 \section{Extrapolation to smaller pixels}
 
-Figure~\ref{fig:cluSize25Pitch} shows the cluster-size distribution
-and the hit residuals for an extrapolation of the simulation to
-$25\,\micron$ pitch pixels with $50\,\micron$ thick sensors with a
-Timepix3-type readout chip operated at 500 electrons threshold with
-10-bit TOT measurement and an electronic noise of $\sim$90
-electrons. The same digitiser as the one used to validate the
+Previously, we have seen a good agreement between the AllPix
+simulations and the data taken in the test beams for thin silicon
+sensors. The simulation is used in the following to predict the
+performance of smaller pixel pitches.
+
+Figure~\ref{fig:cluSize25Pitch} shows the cluster-size
+distribution and the hit residuals for an extrapolation of the
+simulation to $25\,\micron$ pitch pixels with $50\,\micron$ thick
+sensors with a Timepix3-type readout chip operated at 500 electrons
+threshold with 10-bit TOT measurement and an electronic noise of
+$\sim$90 electrons. The same digitiser as the one used to validate the
 simulation in \cref{sec:ThinSensorSimuValidation} is used for the
 extrapolation. Even with a small pitch, in such thin sensors, only
 $\sim$16\% of clusters originating from minimum ionising particles
