--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -643,8 +643,10 @@ increasing the threshold than for thick sensors.
   \end{subfigure}
   \caption{(a) Global detection efficiency as a function of the
     threshold of the readout ASIC for different sensor thicknesses
-    (for the assemblies W19\_L8, W5\_E2 and W5\_F1). (b) focuses the
-    efficiencies between $95\%$ and $100\%$.}
+    (for the assemblies W19\_L8, W5\_E2 and W5\_F1). (b) focuses on
+    the efficiencies between $95\%$ and $100\%$. The calculation of
+    the efficiency does not exclude the track hitting the masked
+    pixels, therefore the efficiency is slightly lower than $100\%$.}
   \label{fig:efficiency_VS_Threshold}
 \end{figure}
 
