Reference for SPS

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -527,3 +527,13 @@ author = "F. Krummenacher",
       reportNumber   = "EUDET-REPORT-2007-01",
       SLACcitation   = "%%CITATION = PHYSICS/0703058;%%"
 }
+
+@online{SPS,
+      title          = "CERN SPS",
+      url            = "http://sba.web.cern.ch/sba/"
+}
+
+@online{H6Beamline,
+      title          = "H6 beam line",
+      url            = "http://sba.web.cern.ch/sba/BeamsAndAreas/resultbeam.asp?beamline=H6"
+}
