--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -22,16 +22,16 @@ beam reference. This chapter gives an overview of the components of
 the CLICdp Timepix3 telescope and its tracking performance. The
 Timepix3 telescope is implemented in AllPix simulations
 (c.f. \cref{sec:AllPix}) and its performance is compared to the data
-taken at the CERN SPS. Finally, the tracking resolution on the DUT is
-extracted in simulations using the Monte Carlo information.
+taken at the CERN SPS~\cite{SPS}. Finally, the tracking resolution on
+the DUT is extracted in simulations using the Monte Carlo information.
 
 %% --------------------------------------------- %%
 \section{Experimental setup at the CERN SPS}
 \label{sec:CERN_SPS}
-The Timepix3 telescope is placed at the H6 beam of the CERN SPS
-typically operated with a $120\,\gev$ pion beam. The assemblies listed
-in \cref{tab:Timepix3Assemblies} are tested as DUTs using this
-telescope. The beam is configured in such a way to have
+The Timepix3 telescope is placed at the H6 beam~\cite{H6Beamline} of
+the CERN SPS typically operated with a $120\,\gev$ pion beam. The
+assemblies listed in \cref{tab:Timepix3Assemblies} are tested as DUTs
+using this telescope. The beam is configured in such a way to have
 $\sim2.6 \times 10^6$ particles per five-second spill. The telescope
 planes are positioned in a way to give the best tracking resolution
 for the given beam energy taking into account multiple scatterings and
