Lucie's comments on Intro and CLIC

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -25,9 +25,9 @@ with center-of-mass energies from $380\,\gev$ up to $3\,\tev$.
 
 In this chapter, we will briefly discuss the standard model of
 particle physics and attempt to understand how CLIC can determine more
-precisely the properties of the Higgs boson. Then the CLIC detector
-and its components are described. The focus is put on the vertex
-detector, its requirements and its flavour-tagging performance.
+precisely the properties of the Higgs boson. Subsequently the CLIC
+detector and its components are described. The focus is put on the
+vertex detector, its requirements and its flavour-tagging performance.
 
 \section{Physics potential at CLIC} 
 
@@ -67,28 +67,28 @@ suggests that the Higgs boson gives the mass to the W and Z boson by
 interaction with a Higgs field.
 
 The Higgs particle can be produced in a particle collider by the
-collision between high energetic particles. Heavy particles, like the
-Higgs boson, are occasionally produced and then detected by a particle
-detector. The Standard Model predicts different mechanisms to produce
-the Higgs boson and the probability to produce it is very small. For
-example, in LHC only 1 Higgs boson is produced per 10 billion
-collisions.
+collision between highly energetic particles. Heavy particles, like
+the Higgs boson, are occasionally produced and then detected by a
+particle detector. The Standard Model predicts different mechanisms to
+produce the Higgs boson and the probability to produce it is very
+small. For example, in LHC only 1 Higgs boson is produced per 10
+billion collisions.
 
 An electron-positron collider allows to perform precision measurements
 by colliding beams made of elementary particles. In fact, with
 elementary particles, the center-of-mass energy and the polarisation
-of the colliding particles can be selected precisely. And unlike
+of the colliding particles can be selected precisely. Unlike
 proton-proton collisions at the LHC experiments, there is no
 underlying event from proton remnants.
 
 
-CLIC is foreseen to be built and operated in three various stages with
+CLIC is foreseen to be built and operated in three stages with
 center-of-mass energies of $380\,\gev$, $1.5\,\tev$ and $3\,\tev$ as
 shown in \cref{fig:CLICstaging}~\cite{Felzmann:2157041}. The site
 studies have shown that CLIC could be placed near CERN
 underground. For each stage, to increase the center-of-mass energy,
 more accelerating modules will be needed, making the accelerator
-longer. The site length for $3\,\tev$ will be 48~km.
+longer. The site length for $3\,\tev$ will be 50~km.
 
 \begin{figure}[htbp]
   \centering
@@ -99,14 +99,14 @@ longer. The site length for $3\,\tev$ will be 48~km.
   \label{fig:CLICstaging}
 \end{figure}
 
-The different energy stages at CLIC allows for maximising the
+The different energy stages at CLIC allow for maximising the
 luminosity performance and physics potential for high precision
 measurements of Standard Model physics (e.g. Higgs, top) as well as
-new physics potentially discovered at the $13\,\tev$ LHC. 
+new physics potentially discovered at the $13\,\tev$ LHC.
 
 The first energy stage allows for studying the Standard Model Higgs
-physics, top-quark physics with the possibility to perform a t\={t}
-threshold scan. The second energy stage provide direct sensitivity to
+physics and top-quark physics with the possibility to perform a t\={t}
+threshold scan. The second energy stage provides direct sensitivity to
 many physics beyond the SM (BSM) models. With higher Higgs statistics,
 rare decays such as t\={t}H and double Higgs productions can be
 measured. Finally the third energy stage provides the best sensitivity
@@ -124,9 +124,9 @@ mechanisms to produce the Higgs boson at CLIC.
 
 The cross sections to produce a Higgs with a mass of $M_H = 126\,\gev$
 as a function of the center-of-mass energy $\sqrt{s}$ is given in
-\cref{fig:corssSectionH125}. For lower $\sqrt{s}$, the HZ mechanism is
-dominant. For higher energies, the H$\nu_{e}\bar{\nu_{e}}$ mechanism
-gets dominant.
+\cref{fig:corssSectionH125}. Below $\sqrt{s}$ of $\sim500\,\gev$, the
+HZ mechanism is dominant. For higher energies, the
+H$\nu_{e}\bar{\nu_{e}}$ mechanism dominates.
 
 \begin{figure}[htbp]
   \centering
