--- a/include/Introduction.tex
+++ b/include/Introduction.tex
@@ -4,25 +4,27 @@
 % ==============================================================================             
 
 
-The Compact Linear Collider (CLIC)~\cite{Linssen:1425915} concept for
+The Compact Linear Collider (CLIC) concept~\cite{Aicheler:1500095} for
 a future linear e\textsuperscript{+}e\textsuperscript{-} collider has
 the potential to complement the measurements done by the LHC
 experiments. With proposed centre-of-mass energies of $380\,\gev$,
 $1.5\,\tev$ and $3\,\tev$ and with instantaneous luminosity up to
 $6\times10^{34}\,\inversecmsquaredsec$, it allows for high precision
 measurements of Standard Model physics and of new physics potentially
-discovered at the $13\,\tev$ LHC. 
+discovered at the $13\,\tev$ LHC as well as searches for Beyond
+Standard Model (BSM) physics.
 
 A detector model is being developed for the CLIC experiment taking
 into account the precision physics requirements and experimental
-conditions. These conditions set challenging demands for the vertex
-detector in terms of spatial resolution, material budget, timing
-resolution and efficient heat removal from sensors and readout. The
-CLIC vertex detector R\&D programme studies different sensor
-technologies and takes into account constraints from mechanics, power
-delivery and cooling.  The goal is to achieve a single-point
-resolution of $3\,\micron$ with $50\,\micron$ thick sensors coupled to
-$50\,\micron$ thick readout ASICs with $25\,\micron$ pixel pitch.
+conditions~\cite{Linssen:1425915}. These conditions set challenging
+demands for the vertex detector in terms of spatial resolution,
+material budget, timing resolution and efficient heat removal from
+sensors and readout. The CLIC vertex detector R\&D programme studies
+different sensor technologies and takes into account constraints from
+mechanics, power delivery and cooling.  The goal is to achieve a
+single-point resolution of $3\,\micron$ with $50\,\micron$ thick
+sensors coupled to $50\,\micron$ thick readout ASICs with
+$25\,\micron$ pixel pitch.
 
 In this thesis, the feasibility of thin sensors for operation for the
 CLIC vertex detector is studied with the
@@ -50,21 +52,21 @@ requirements on the CLIC detector, with a focus on the vertex
 detector, are given. The flavour-tagging performance is studied for
 different geometries of the vertex detector.
 
-Principles of the semiconductor detectors are presented in
-\cref{sec:SiliconTheory} as this thesis focuses on the R\&D of the
-vertex detector.
+As this thesis focuses on the R\&D of the vertex detector, principles
+of the semiconductor detectors are presented in
+\cref{sec:SiliconTheory}.
 
 The Timepix3 readout ASIC is presented in
-\cref{ch:FE_electronics}. The assemblies tested are introduced and
-their readout noise is as well studied. The calibration methods for
-these assemblies are discussed.
+\cref{ch:FE_electronics}. The tested assemblies are introduced and
+their readout noise is studied. The calibration methods for these
+assemblies are discussed.
 
 The simulation and reconstruction software frameworks are described in
 \cref{sec:Software}. The simulations are later validated with
 data. The reconstruction frameworks are used for the analysis of both
 simulations and data.
 
-The Timepix3 pixel-beam telescope used for the testing of the Timepix3
+The Timepix3 pixel beam-telescope used for testing the Timepix3
 assemblies is described in \cref{ch:Telescope}. Its performance is
 investigated in data and simulations.
 
